# mednotes

./: .generated-from.json  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package.json  pyproject.toml
.opencode/mednotes/: package-lock.json  package.json  pyproject.toml
.opencode/mednotes/agents/: med-chat-triager.md  med-knowledge-architect.md  med-publish-guard.md
.opencode/mednotes/contracts/: agents.json  opencode-plugin.json
.opencode/mednotes/docs/: agent-prompt-hardening.md  agent-role-contracts.md  anki-mcp-twenty-rules.md  atomicity-splitting-policy.md  extension-docs.md  flashcard-ingestion.md  knowledge-architect.md  merge-policy.md  public-vocabulary.md  semantic-linker.md  taxonomy-policy.md  triage-policy.md  vault-version-control.md  vocabulary-db-recovery.md  workflow-output-contract.md
.opencode/mednotes/docs/anki-templates/: README.md  cloze.back.html  cloze.front.html  qa.back.html  qa.front.html  style.css
.opencode/mednotes/hooks/: hooks.json
.opencode/mednotes/scripts/: bootstrap_windows_python_uv.cmd  bootstrap_windows_python_uv.ps1  enrich_notes.py  full_reset_windows_python_uv.cmd  reset_windows_python_uv.ps1  run_python.mjs
.opencode/mednotes/scripts/hooks/: antigravity_hook_status.mjs  mednotes_hook.mjs
.opencode/mednotes/scripts/mednotes/: _runtime_paths.py  anki_model_validator.py  capture_extension_diff.py  feedback_report.py  flashcard_index.py  flashcard_pipeline.py  flashcard_report.py  flashcard_sources.py  obsidian_note_utils.py  project_fsm.py  setup_telemetry_email.py  (+4 more)
(+351 files in other folders)
